--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -1,1 +1,88 @@
+.container {
+	padding-left: 50px;
+	padding-right: 50px;
+
+}
+
+nav {
+	background-color: grey;
+	height:60px;
+	width: 100%;
+	position: fixed;
+	
+}
+
+nav .logo {
+	width: 50px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	border-radius: 50%;
+	vertical-align: middle;
+	border: 1px solid black;
+
+}
+
+nav ul {
+	display: inline-block;
+	list-style: none;
+}
+
+nav li{
+	display: inline-block;
+}
+
+nav li::after {
+	margin-left: 5px;
+	content: "|";
+	
+}
+
+
+nav a:hover {
+	color: black;
+}
+
+body {
+  	background: url(../images/outerspace_landscape.jpeg) no-repeat;
+  	background-size: cover;
+}
+
+main {
+	padding-top: 90px;
+
+
+
+}
+
+.box {
+	margin-top: 200px;
+	width: 600px;
+	height: 300px;
+	margin-right: auto;
+	margin-left: auto;
+	border: 10px green dotted;
+	position:relative;
+}
+
+.animal {
+  position: absolute;
+  width: 150px;
+}
+
+/* I wasn't able to figure these out... I had to look at the solution
+   How do I go about figuring these values? */
+.cat {
+  top: -90px;
+  left: -90px;
+}
+
+.dog {
+  bottom: -120px;
+  right: -60px;
+}
+
+
+
+
+
 
