--- a/styles/float-page.css
+++ b/styles/float-page.css
@@ -10,3 +10,23 @@ main {
   margin-left: auto;
   margin-right: auto;
 }
+
+.image {
+	width: 300px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+
+}
+
+.left {
+	float: left;
+	margin-right: 20px;
+}
+
+.right {
+	float:right;
+	margin-left: 20px;
+	
+}
+
+
